# Custom-TLS-1.3-Cryptographic-Handshake-Engine

./: CMakeLists.txt  Makefile  README.md  build.zig
bindings/ada/: tls.gpr
bindings/ada/src/: asn1.adb  parser.adb
bindings/cpp/: CMakeLists.txt
bindings/cpp/src/: engine.cpp  engine.hpp  handshake.cpp  state.cpp
bindings/d/: dub.json
bindings/d/source/: buffer.d  memory.d
bindings/go/: go.mod  main.go
bindings/java/: pom.xml
bindings/java/src/main/java/com/axon/: Engine.java  Handshake.java
bindings/mojo/src/: crypto.mojo  handshake.mojo
bindings/nim/: tls.nimble
bindings/nim/src/: handshake.nim  tls.nim
bindings/node/: client.js  package.json
bindings/ocaml/: dune
bindings/ocaml/src/: asn1.ml  tls.ml
bindings/rust/: Cargo.toml
bindings/rust/src/: crypto.rs  handshake.rs  lib.rs  record.rs
bindings/types/: package.json  types.ts
bindings/zig/: build.zig
bindings/zig/src/: crypto.zig  handshake.zig  main.zig
configs/: config.yaml
core/include/: axon_engine.h  constants.h  context.h  handshake.h  record.h  state.h  tls_engine.h
core/source/: constants.c  context.c  handshake.c  main.c  record.c  state.c
crypto/include/: chacha20.h  sha256.h  x25519.h
crypto/source/: aes_gcm.c  chacha20.c  constant.c  hkdf.c  sha256.c  x25519.c
debian/: axon.install  changelog  control  files  rules
debian/.debhelper/axon/: dbgsym-build-ids
debian/.debhelper/axon/dbgsym-root/DEBIAN/: control  md5sums
debian/axon/DEBIAN/: control  md5sums
debian/axon/usr/include/axon/: aes_gcm.h  constant.h  context.h  handshake.h  hkdf.h  log.h  pool.h  record.h  state.h
debian/axon/usr/share/doc/axon/: copyright
memory/include/: secure.h
memory/source/: pool.c  secure.c
parser/include/: asn1.h  x509.h
parser/source/: asn1.c  x509.c
scripts/: build.sh  deploy.ps1
tests/c/: test_asn1.c  test_crypto.c  test_handshake.c
tests/suite/: requirements.txt  test.py
utils/include/: bytes.h
utils/source/: bytes.c  log.c
